syntax = "proto3";
option go_package = "github.com/eolinker/eosc";
package service;

message ProfessionConfig{
  string name = 1;//
  string label = 2;//
  string desc = 3 ;//
  repeated string dependencies = 4;
  repeated string appendLabels = 5;
  repeated DriverConfig drivers = 6;
}
message ProfessionConfigData{
  repeated ProfessionConfig data=1;
}

message ProfessionInfo {
  string name = 1;//
  string label = 2;//
  string desc = 3 ;//
}
message ProfessionDetail{
  string name = 1;
  string label = 2;
  string desc = 3 ;
  repeated string dependencies = 4;
  repeated string appendLabels = 5;
  repeated DriverDetail drivers = 6;
}
message DriverInfo{
  string id = 1;
  string name = 2;
  string label = 3;
  string desc = 4;
  //  string profession=5;
}
message DriverConfig{
  string id = 1;
  string name = 2;
  string label = 3;
  string desc = 4;
  map<string, string> params = 5;
}
message PluginInfo {
  string group = 6;
  string project = 7;
  string name = 8; // 插件名
}
// 驱动详情
message DriverDetail{
  string id = 1;
  string driver = 2; // 驱动名 = driverConfig.name
  string label = 3;
  string desc = 4;
  //  string profession=5;
  map<string, string> params = 5;
  PluginInfo plugin=6;
}

message WorkerInfo{
  string id = 1;
  string profession = 2;
  string name = 3;
  string driver = 4;
  string create = 5;
  string update = 6;
}

message WorkerData{
  string id = 1;
  string profession = 2;
  string name = 3;
  string driver = 4;
  string create = 5;
  string update = 6;
  bytes body = 7;
}
message WorkersData{
  repeated WorkerData data=1;
}